--- a/07 - Array Cardio Day 2/index-START.html
+++ b/07 - Array Cardio Day 2/index-START.html
@@ -28,15 +28,43 @@
     // Some and Every Checks
     // Array.prototype.some() // is at least one person 19 or older?
     // Array.prototype.every() // is everyone 19 or older?
-
+    console.log(people.some(function (person) {
+      const currYear = (new Date()).getFullYear();
+      if (currYear - person.year >= 19){
+        return true;
+      }
+      return false;
+    }));
+    console.log(people.every(function (person) {
+      const currYear = (new Date()).getFullYear();
+      if (currYear - person.year >= 19){
+        return true;
+      }
+      return false;
+    }));
     // Array.prototype.find()
     // Find is like filter, but instead returns just the one you are looking for
     // find the comment with the ID of 823423
-
+    console.log(comments.find(function (comment) {
+      if (comment.id === 823423){
+        return comment;
+      }
+    }))
     // Array.prototype.findIndex()
     // Find the comment with this ID
     // delete the comment with the ID of 823423
-
+    console.log(comments.findIndex(function (comment) {
+      if (comment.id === 823423){
+        return comment;
+      }
+    }));
+    // comments.splice(1, 1);
+    console.log(comments);
+    const newComments = [
+      ...comments.slice(0,1),
+      ...comments.slice(2)
+    ];
+    console.table(newComments);
   </script>
 </body>
 </html>
